googleVis 0.2.18 [2012-10-14]
----------------------------

NEW FEATURES

* plot.gvis has a new argument 'browser'. The argument is passed on
  to the function browseURL. The 'browser' argument is by default set
  based on the output of interactive(). This prevents R CMD CHECK
  trying to open browser windows. See the help file of plot.gvis for
  more details.
  Thanks to Henrik Bengtsson for his comments and suggestions.

* gvisGeoChart accepts tooltip.triggers following an update of the
  Visualisation API by Google, 24 September 2012

* R data frames are transformed into JSON objects using a new function 
  provided by Sebastian Kranz and Wei Luo. The new function speeds up 
  the googleVis functions.

Changes

* The Google API is loaded via a secure connection: https:// rather than http://. 
  Thanks to Erik Bülow for pointing this out (Issue 19). 

* Changed example in help file of gvisMap to show how to include html
  code in tooltip. 

Bug Fixes

* Chart editor was not validated properly under XHMTL 1.0 Strict


googleVis 0.2.17 [2012-08-02]
----------------------------

Changes

 * Added section on 'knitr' and 'Rook' to vignette

 * Added example to gvisMerge demonstrating the use of 'Reduce'

Bug Fixes

 * Data frames with one row only were not displayed in a chart.
   Thanks to Oliver Jay and Wai Tung Ho for reporting this issue.

 * Fixed earth quake example, using data from 
   http://www.iris.edu/seismon/last30.html, 
   Mag was read as factor rather than numeric

googleVis 0.2.16 [2012-06-01]
----------------------------

Changes

 * Updated example in help file of gvisGeoChart for individual colour
   axis 

 * Updated links to Google API pages

NEW FEATURES

 * gvisMotionCharts accepts quarterly and weekly time dimensions.
   Thanks to Jason Pickering for providing a patch. 

googleVis 0.2.15 [2012-03-04]
----------------------------

Changes

*  Updated documentation following a new version of the Google API
   on 22 February 2012. 
     